--- a/_sources/101/00_grid_rechunk.ipynb
+++ b/_sources/101/00_grid_rechunk.ipynb
@@ -19,7 +19,7 @@
    "id": "885c6a17-a487-4ddd-8596-ac2006b14068",
    "metadata": {},
    "source": [
-    "### Chunking and rechunking resources\n",
+    "## Chunking and rechunking resources\n",
     "*  [\"Making Earth Science data more accessible\"](https://www.slideserve.com/kiaria/making-earth-science-data-more-accessible-experience-with-chunking-and-compression), AMS presentation slides by Russ Rew, Unidata (2013)\n",
     "*  [\"Rechunker: The missing link for chunked array analytics\"](https://medium.com/pangeo/rechunker-the-missing-link-for-chunked-array-analytics-5b2359e9dc11), Medium blog post by Ryan Abernathy, Columbia University (2020)\n",
     "*  [\"Rechunker\" Python Library Documentation](https://rechunker.readthedocs.io/en/latest/)"
@@ -35,11 +35,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.9 ('users-pangeofu')",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
