example markdown; hidden cells

--- a/101/01_file_inspection.ipynb
+++ b/101/01_file_inspection.ipynb
@@ -15,9 +15,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import fsspec\n",
     "import xarray as xr\n",
-    "import hvplot.xarray"
+    "import hvplot.xarray\n",
+    "import zarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "479f6a69-9d2f-4560-b242-6ecab6bb0a3c",
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Python : \", sys.version)\n",
+    "print(\"fsspec : \", fsspec.__version__)\n",
+    "print(\"xarray : \", xr.__version__)\n",
+    "print(\"zarr   : \", zarr.__version__)"
    ]
   },
   {
@@ -238,11 +257,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.9 ('users-pangeofu')",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
