--- a/back/Appendix_A.ipynb
+++ b/back/Appendix_A.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell is tagged `remove-input`: "
+    "The following cell is tagged `remove-input`: "
    ]
   },
   {
@@ -51,14 +51,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code cell is not included, yet its output is. "
+    "Did you see that cell?  or just its output?   A code cell with `remove-input` will not show in the complied book, yet its output is shown. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell is tagged `hide-input`:"
+    "The following cell is tagged `hide-input`:"
    ]
   },
   {
@@ -79,29 +79,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This markdown cell includes an `admonition` directive. \n",
-    "\n",
-    ":::{seealso}\n",
-    "This is a 'see also' admonition.\n",
-    ":::\n",
-    "\n",
-    "These are useful to draw attention to important text. The styling \n",
-    "sets it apart from the main text flow. "
+    "## Extended Markdown"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Admonitions\n",
+    "This markdown cell includes an `admonition` directive. \n",
+    "\n",
+    ":::{seealso}\n",
+    "This is a 'see also' admonition.\n",
+    "\n",
+    "To learn about all of the possible admonition styles, see <https://myst-parser.readthedocs.io/en/latest/syntax/admonitions.html>\n",
+    ":::\n",
+    "\n",
+    "These are useful to draw attention to important text. The styling \n",
+    "sets it apart from the main text flow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Margins\n",
+    "\n",
+    "::::{margin}\n",
+    "**This** is an example of text in the margin\n",
+    ":::{note}\n",
+    "Note that margins can contain just about any sort of MyST, including admonitions. \n",
+    ":::\n",
+    "::::\n",
     "This markdown cell includes a directive to put some text into the margin\n",
     "of the rendered output. \n",
     "\n",
-    ":::{margin}\n",
-    "This is an example of text in the margin\n",
-    ":::\n",
-    "\n",
-    "It is useful to display footnote-like text. It can include just about any\n",
-    "markdown in the text block. "
+    "It is useful to display footnote-like text. \n"
    ]
   },
   {
@@ -113,6 +126,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
