--- a/101/02a_count_jsons.ipynb
+++ b/101/02a_count_jsons.ipynb
@@ -5,7 +5,7 @@
    "id": "d5d0a75f-986a-4493-ad9d-98e7d727abd4",
    "metadata": {},
    "source": [
-    "#### count Kerchunked JSON files \n",
+    "# Count Kerchunked JSON files \n",
     "Run this while the kerchunking is taking place to make sure list is growing"
    ]
   },
@@ -76,9 +76,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-default-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -91,13 +91,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
-   }
   }
  },
  "nbformat": 4,
