[#05]: corrects some typos

--- a/OpenDAP_to_S3.ipynb
+++ b/OpenDAP_to_S3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ZARR on S3 from OpenDAP"
+    "# Writing OpenDAP data to ZARR on S3"
    ]
   },
   {
@@ -225,7 +225,7 @@
     "bytes = 1 * 23 * 44 * 4\n",
     "kbytes = bytes / (2**10)\n",
     "mbytes = kbytes / (2**10)\n",
-    "print(f\"TMN chunk size: {bytes=} == {kbytes=:.2f} == {mbytes=:.4f}\")\n"
+    "print(f\"TMN chunk size: {bytes=} ## {kbytes=:.2f} ## {mbytes=:.4f}\")"
    ]
   },
   {
@@ -253,17 +253,17 @@
     "### Size\n",
     "it's a balance.. here are some constraints: \n",
     "* Files Too Big -- In a zarr dataset, each chunk is stored as a separate file. If we \n",
-    "  need data from a chunk, not matter how little or how much, that file gets \n",
-    "  opened, decompressed, and read in. Large chunk sizes means that there may be \n",
+    "  need data from a chunk, no matter how little or how much, that file gets \n",
+    "  opened, decompressed, and the whole thing read in. Large chunk sizes means that there may be \n",
     "  a lot of data transferred in situations when only a subset of that chunk's \n",
-    "  data is needed.\n",
+    "  data is needed. (\"sharding\" is coming in zarr v3, but for now, this is how it works). \n",
     "* Files Too Small -- If the chunk size is too small, then we need to read a lot\n",
     "  of files to get the data we might want. For S3 in particular, the overhead \n",
-    "  surrounding the openining of individual files can add significant latency to \n",
+    "  surrounding the opening of individual files can add significant latency to \n",
     "  data reads.  Reading 10 files which are 10Mb each takes longer than reading \n",
     "  one file which is 100Mb.\n",
     "  \n",
-    "As a general rule, aim for chunk sizes between 10 and 200Mb, depending on shape\n",
+    "As a general rule, aim for chunk sizes between 10 and 200MB, depending on shape\n",
     "and expected read pattern (see below). Expect 100ms latency for each separate\n",
     "chunk that a process needs to open.\n"
    ]
@@ -283,7 +283,7 @@
     "  * As a special case -- are specific study areas more used than others\n",
     "\n",
     "\n",
-    "#### TIME"
+    "#### TIME dimension"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1512 time steps.... what happens if we chunk in twelves\n",
+    "# 1512 time steps.... what happens if we chunk in twelves (i.e. a year at a time)\n",
     "print(\"We need {} chunks.\".format(1512 // 12))"
    ]
   },
@@ -335,9 +335,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that for cluster-aware analyses, multiple chunks can be read at the same time. Total wall-clock time will be reduced in that case. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### SPACE\n",
     "\n",
-    "We're realy chunking in dimensions -- and there are two dimensions to this dataset which contribute to \"space\": `lat` and `lon`.  These can have separate chunk sizes. The question to ask is whether future users of this data will want same-sized \"tiles\" in space, or will they want equal numbers of longitude and latitude?  (That is, is it important that the North-South extent be broken into the same number of chunks as the East-West extent?).  I'll be breaking this into square tiles: "
+    "We're realy chunking in dimensions -- and there are two dimensions to this dataset which contribute to \"space\": `lat` and `lon`.  These can have separate chunk sizes. The question to ask is whether future users of this data will want square \"tiles\" in space, or will they want equal numbers of longitude and latitude?  (That is, is it important that the North-South extent be broken into the same number of chunks as the East-West extent?).  I'll be breaking this into square tiles, so there will be more `lon` chunks than `lat` chunks: "
    ]
   },
   {
@@ -400,7 +407,7 @@
    "source": [
     "This is not *quite* as good, in terms of full-chunk remainders, but the whole extent can be had in only 8 chunks. \n",
     "\n",
-    "Note, that if were really confident that most analyses wanted the full extent, we would just put the whole lat/lon dimensions into single chunks each. This would ensure (and **require**) that we read the entire extent any time we wanted any **part** of the extent.  Our poor time-series analysis would then be stuck reading the entire dataset to get time values for a single location. \n",
+    "Note, that if were really confident that most analyses wanted the full extent, we would just put the whole lat/lon dimensions into single chunks each. This would ensure (and **require**) that we read the entire extent any time we wanted any **part** of the extent for a given timestep.  Our poor time-series analysis would then be stuck reading the entire dataset to get all time values for a single location. `:sadface:`\n",
     "\n",
     "### Total Chunk Size\n",
     "Now that we have a rough idea of the chunk dimensions, let's compute its size in bytes.  This will tell us if we've hit our target of between 10 and 200Mb per chunk.  More importantly, it will tell us if we will overwhelm the OpenDAP server -- the server can only give us 500MB at a time. Chunks should really be smaller than this (which we want anyway, but this 500MB limit is a hard cut-off). "
@@ -416,7 +423,7 @@
     "bytes = 354 * 354 * 72 * 4\n",
     "kbytes = bytes / (2**10)\n",
     "mbytes = kbytes / (2**10)\n",
-    "print(f\"TMN chunk size: {bytes=} == {kbytes=:.2f} == {mbytes=:.4f}\")"
+    "print(f\"TMN chunk size: {bytes=} ## {kbytes=:.2f} ## {mbytes=:.4f}\")"
    ]
   },
   {
@@ -491,7 +498,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the coordinate variables (`lat`, `lon`, etc) are stored as single-chunk stripes of data. The index will always be needed in its entirity, so we chunk it such that it reads with one chunk. "
+    "Note that the coordinate variables (`lat`, `lon`, etc) are stored as single-chunk stripes of data. The index will always be needed in its entirity, so we chunk it such that it reads with one chunk. \n",
+    "\n",
+    "Also note -- I gave the full chunk plan **AS IF** we were going to instruct at tool like `rechunker` to chunk in a particular way.  This pattern is already the shape our data is in, because that's how we asked for it from OpenDAP.  "
    ]
   },
   {
