--- a/OpenDAP_to_S3.ipynb
+++ b/OpenDAP_to_S3.ipynb
@@ -9,7 +9,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "The objective demonstrated here is to take a dataset which is already published via an OpenDAP endpoint and write it to S3 in zarr format. The end goal is to make the given dataset 'cloud optimized' for workflows operating in cloud compute environment. "
    ]
@@ -79,7 +81,7 @@
     "    os.path.expanduser('~/.aws/credentials') \n",
     "    # default location... if yours is elsewhere, change this.\n",
     ")\n",
-    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-renci')\n",
+    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-rsignellbucket2')\n",
     "_endpoint = os.environ.get('AWS_S3_ENDPOINT', 'https://renc.osn.xsede.org')\n",
     "# Set environment vars based on parsed awsconfig\n",
     "try:\n",
@@ -125,7 +127,7 @@
    "outputs": [],
    "source": [
     "# OUTPUT Location: \n",
-    "workspace = f's3://rsignellbucket2/nhgf/prism/'\n",
+    "workspace = f's3://rsignellbucket2/testing/prism/'\n",
     "\n",
     "# OUTPUT Dataset Name:\n",
     "FNAME = 'PRISM_v2.zarr'\n",
@@ -140,7 +142,8 @@
     "# as defined above. No need to specify profile or keys. The endpoint, \n",
     "# unfortunately is necessary to name explicitly.\n",
     "\n",
-    "outfile = fsw.get_mapper(workspace + FNAME)\n",
+    "outdir = workspace + FNAME\n",
+    "target_store = fsw.get_mapper(outdir)\n",
     "\n",
     "for fname in [FNAME]:\n",
     "    if fsw.exists(workspace + fname):\n",
@@ -168,7 +171,7 @@
    "outputs": [],
    "source": [
     "ds_in = xr.open_dataset(OPENDAP_url, decode_times=False)\n",
-    "display(ds_in)"
+    "ds_in"
    ]
   },
   {
@@ -190,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at one of the data variables to learn more about how it is presended by the opendap endpoint. "
+    "Let's look at one of the data variables to learn more about how it is presented by the OPeNDAP endpoint. "
    ]
   },
   {
@@ -199,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(ds_in.tmn)"
+    "ds_in.tmn"
    ]
   },
   {
@@ -225,7 +228,7 @@
     "bytes = 1 * 23 * 44 * 4\n",
     "kbytes = bytes / (2**10)\n",
     "mbytes = kbytes / (2**10)\n",
-    "print(f\"TMN chunk size: {bytes=} ## {kbytes=:.2f} ## {mbytes=:.4f}\")"
+    "print(f\"TMN chunk size: {bytes=} ({kbytes=:.2f})({mbytes=:.4f})\")"
    ]
   },
   {
@@ -257,11 +260,8 @@
     "  opened, decompressed, and the whole thing read in. Large chunk sizes means that there may be \n",
     "  a lot of data transferred in situations when only a subset of that chunk's \n",
     "  data is needed. (\"sharding\" is coming in zarr v3, but for now, this is how it works). \n",
-    "* Files Too Small -- If the chunk size is too small, then we need to read a lot\n",
-    "  of files to get the data we might want. For S3 in particular, the overhead \n",
-    "  surrounding the opening of individual files can add significant latency to \n",
-    "  data reads.  Reading 10 files which are 10Mb each takes longer than reading \n",
-    "  one file which is 100Mb.\n",
+    "* Files Too Small -- If the chunk size is too small, the time it takes to read and \n",
+    "  decompress the data for each chunk can become comparable to the latency of S3 (typically 10-100ms). We want the reads to take at least a second or so, so that the latency is not a significant part of the overall timing. \n",
     "  \n",
     "As a general rule, aim for chunk sizes between 10 and 200MB, depending on shape\n",
     "and expected read pattern (see below). Expect 100ms latency for each separate\n",
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTE** that what it is giving us for `_ChunkSizes` in the attributes is irrelevant now.  We've specifically asked the dask interface to request this data according to the chunk pattern specified -- and revealed in the graphical display.  Dask will make specific OpenDAP requests *per chunk* using appropriate query parameters to the server. \n",
+    "**NOTE** that what it is giving us for `_ChunkSizes` in the attributes is irrelevant now.  We've specifically asked the dask interface to request this data according to the chunk pattern specified -- and revealed in the graphical display.  Dask will make specific OPeNDAP requests *per chunk* using appropriate query parameters to the server. \n",
     "\n",
     "Because this chunk pattern can be provided by the server, and it is a reasonable pattern for object storage in S3, we do **not** need to add the complexity of `rechunker`. We can just have the zarr driver write it out according to the same plan\n"
    ]
@@ -483,9 +483,9 @@
    "outputs": [],
    "source": [
     "chunk_plan = {\n",
-    "    'ppt', {'time': 72, 'lon': 354, 'lat': 354}    \n",
-    "    'tmx', {'time': 72, 'lon': 354, 'lat': 354}    \n",
-    "    'tnm', {'time': 72, 'lon': 354, 'lat': 354}\n",
+    "    'ppt':{'time': 72, 'lon': 354, 'lat': 354},    \n",
+    "    'tmx':{'time': 72, 'lon': 354, 'lat': 354},    \n",
+    "    'tnm':{'time': 72, 'lon': 354, 'lat': 354},\n",
     "    'time_bnds': {'time': 1, 'tbnd': 2},\n",
     "    'lat': (621,),\n",
     "    'lon': (1405,),\n",
@@ -500,7 +500,7 @@
    "source": [
     "Note that the coordinate variables (`lat`, `lon`, etc) are stored as single-chunk stripes of data. The index will always be needed in its entirity, so we chunk it such that it reads with one chunk. \n",
     "\n",
-    "Also note -- I gave the full chunk plan **AS IF** we were going to instruct at tool like `rechunker` to chunk in a particular way.  This pattern is already the shape our data is in, because that's how we asked for it from OpenDAP.  "
+    "Also note -- I gave the full chunk plan **AS IF** we were going to instruct at tool like `rechunker` to chunk in a particular way.  This pattern is already the shape our data is in, because that's how we asked for it from OPeNDAP.  "
    ]
   },
   {
@@ -509,7 +509,7 @@
    "source": [
     "## Ready to Write\n",
     "\n",
-    "OK... finally we are ready to write out our data. Note that the input data is not in memory, but we pretend that it is.  This is one of the many advantages of using dask arrays.  It will fetch the necessary chunks when the data in them is needed. And the good news about that is that dask is capable of doing these operations *in parallal* and *without hand-holding*.  We don't have to design a parallel workflow: dask will sort it out.  BUT... to take advantage of that parallelism, we need to start up a cluster: \n",
+    "OK... finally we are ready to write out our data. Note that the input data is not in memory, but we pretend that it is.  This is one of the many advantages of using dask arrays.  It will fetch the necessary chunks when the data in them is needed. And the good news about that is that Dask is capable of doing these operations *in parallel* and *without hand-holding*.  We don't have to design a parallel workflow: Dask will sort it out.  BUT... to take advantage of that parallelism, we need to start up a cluster: \n",
     "\n",
     "### Start Dask Cluster"
    ]
@@ -555,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## to_zar()"
+    "## to_zarr()"
    ]
   },
   {
@@ -566,7 +566,7 @@
    "source": [
     "%%time\n",
     "with performance_report('OpenDAP_progress-report.html'):\n",
-    "    ds_in.to_zarr(outfile, mode='w')\n"
+    "    ds_in.to_zarr(target_store, mode='w')"
    ]
   },
   {
@@ -583,8 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del ds_in\n",
-    "new_ds = xr.open_dataset(outfile, engine='zarr', chunks={})\n",
+    "new_ds = xr.open_dataset(target_store, engine='zarr', chunks={})\n",
     "new_ds"
    ]
   },
@@ -594,8 +593,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "new_ds.ppt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import hvplot.xarray\n",
-    "test.tmx.sel(lon=-75, lat=41.1, method='nearest').load().plot()"
+    "new_ds.ppt.sel(lon=-75, lat=41.1, method='nearest').load().plot()"
    ]
   },
   {
@@ -622,13 +630,6 @@
    "source": [
     "client.close(); cluster.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
