--- a/OpenDAP_to_S3.ipynb
+++ b/OpenDAP_to_S3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Writing OpenDAP data to ZARR on S3"
+    "# Writing OpenDAP Data to ZARR on S3"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "    os.path.expanduser('~/.aws/credentials') \n",
     "    # default location... if yours is elsewhere, change this.\n",
     ")\n",
-    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-rsignellbucket2')\n",
+    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-renci')\n",
     "_endpoint = os.environ.get('AWS_S3_ENDPOINT', 'https://renc.osn.xsede.org')\n",
     "# Set environment vars based on parsed awsconfig\n",
     "try:\n",
@@ -145,10 +145,12 @@
     "outdir = workspace + FNAME\n",
     "target_store = fsw.get_mapper(outdir)\n",
     "\n",
-    "for fname in [FNAME]:\n",
-    "    if fsw.exists(workspace + fname):\n",
+    "try:\n",
+    "    if fsw.exists(workspace + FNAME):\n",
     "        logging.warning(\"Removing existing file/folder: %s\", fname)\n",
     "        fsw.rm(workspace + fname, recursive=True)\n",
+    "except:\n",
+    "    pass\n",
     "\n",
     "print(\"READY !!\")\n",
     "\n",
@@ -565,7 +567,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "with performance_report('OpenDAP_progress-report.html'):\n",
+    "with performance_report('./reports/OpenDAP_to_S3-perfreport.html'):\n",
     "    ds_in.to_zarr(target_store, mode='w')"
    ]
   },
@@ -612,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.tmx.sel(time=\"1970-01\").load().hvplot(x='lon', y='lat', rasterize=True, geo=True, tiles='OSM' )"
+    "new_ds.tmx.sel(time=\"1970-01\").load().hvplot(x='lon', y='lat', rasterize=True, geo=True, tiles='OSM' )"
    ]
   },
   {
@@ -634,9 +636,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "users-users-pangeo",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-users-users-pangeo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -648,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
