[#07]: describes helpers a little better

--- a/AWS.ipynb
+++ b/AWS.ipynb
@@ -8,7 +8,14 @@
     "# AWS Credentials Helper\n",
     "\n",
     "This notebook helps set AWS credentials based on already-specified \n",
-    "environment variables for profile and S3 endpoint. "
+    "environment variables for profile and S3 endpoint. \n",
+    "\n",
+    "Before this notebook is called,  you can specify a particular profile and \n",
+    "endpoint you'd like to use.  Do this by setting the appropriate environment\n",
+    "variables: `AWS_PROFILE` and `AWS_S3_ENDPOINT`. \n",
+    "\n",
+    "If these environment variables are not set, defaults will be used (as specified\n",
+    "in the code block below). "
    ]
   },
   {
@@ -40,9 +47,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f7f0646-2a0a-4a1d-aae2-9045dd50622e",
+   "metadata": {},
+   "source": [
+    "It is extremely important that you **never** set any of the access keys or secrets directly -- we never want to include any of those values as string literals in any code.  This code is committed to a public repository, so doing this would essentially publish those secrets.  **ALWAYS** parse the config file as demonstrated above in order to obtain the access key and the secret access key. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e446e487-dd85-4d7d-a8b5-10d63a23dde2",
+   "id": "f473e813-dfff-4e91-a87c-bf7f74a414e8",
    "metadata": {},
    "outputs": [],
    "source": []
