--- a/utils.ipynb
+++ b/utils.ipynb
@@ -5,7 +5,16 @@
    "id": "5d838fc2-b153-4511-b7a5-b7ce360f72ba",
    "metadata": {},
    "source": [
-    "# Utility Functions\n"
+    "# Utility Functions\n",
+    "\n",
+    "This notebook contains a collection of minor utility functions that can help\n",
+    "with common tasks in other notebook. To use these helper functions: \n",
+    "\n",
+    "```python\n",
+    "%run utils.ipynb\n",
+    "```\n",
+    "Then you will have access to the functions defined below.  You may call them \n",
+    "as if they were defined in the notebook which \"ran\" this notebook. "
    ]
   },
   {
@@ -26,16 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from importlib.metadata import version as _v\n",
+    "from sys import version as _sysver\n",
+    "from importlib.metadata import version as _ver\n",
     "\n",
     "def _versions(mlist=None):\n",
-    "    print(\"Python     :\", sys.version.replace('\\n', '')) \n",
+    "    print(\"Python     :\", _sysver.replace('\\n', '')) \n",
     "    if not mlist:\n",
     "        mlist = ['dask', 'xarray', 'fsspec', 'zarr', 's3fs' ]\n",
     "    for m in sorted(mlist):\n",
     "        try:\n",
-    "            print(f\"{m:10s} : {_v(m)}\")\n",
+    "            print(f\"{m:10s} : {_ver(m)}\")\n",
     "        except ModuleNotFoundError:\n",
     "            print(f\"{m:10s} : --\")"
    ]
