--- a/_sources/StartNebariCluster.ipynb
+++ b/_sources/StartNebariCluster.ipynb
@@ -13,24 +13,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71c2ef84-bed9-4dd6-9919-8cab74075035",
+   "execution_count": 1,
+   "id": "2d30b864-d9d5-4bbc-a679-18796516712d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'logging' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdask_gateway\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Gateway\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dask_gateway'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdask_gateway\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Gateway\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[43mlogging\u001b[49m\u001b[38;5;241m.\u001b[39merror(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnable to import Dask Gateway.  Are you running in a cloud compute environment?\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n\u001b[1;32m      7\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "\n",
+    "import logging \n",
     "try:\n",
     "    from dask_gateway import Gateway\n",
     "except ImportError:\n",
     "    logging.error(\"Unable to import Dask Gateway.  Are you running in a cloud compute environment?\\n\")\n",
-    "    raise\n",
-    "os.environ['DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION'] = \"1.0\"\n",
+    "    raise\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7b4e8d1-6e81-4592-8331-b61d4ef12cfd",
+   "metadata": {},
+   "source": [
+    "## Dask Gateway Options\n",
     "\n",
+    "The cluster scheduler on nebari makes use of a `Gateway`. This handles the \n",
+    "instantiation of clusters of workers, and gives us a way to monitor their\n",
+    "progress. Gateways are not used on all clustered systems (KubeCluster is\n",
+    "one alternative you might find on other cloud platforms -- such as `pangeo.chs.usgs.gov`). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b6c6f4e-a945-43f6-a56c-15d6d1b02a7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gateway = Gateway()\n",
+    "os.environ['DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION'] = \"1.0\"\n",
     "_options = gateway.cluster_options()\n",
     "_options.conda_environment='users/users-pangeo'  ##<< this is the conda environment we use on nebari.\n",
-    "_options.profile = 'Medium Worker'\n",
+    "_options.profile = 'Medium Worker'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a895e027-cf9a-4d52-907b-6891339f48c4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## AWS Environment Variables\n",
+    "By default, the cluster does not hand the entire set of environment variables to\n",
+    "each of the workers. This is an important default to override in the case of the\n",
+    "AWS configuration parameters. \n",
+    "\n",
+    "Because individual workers in the cluster do not have access to the standard file\n",
+    "system (where `~/.aws/credentials` is), the workers do not have a way to obtain\n",
+    "their AWS credentials unless we hand them over as environment variables. So... we\n",
+    "have to establish key variables in the environment, and explicity pass those to\n",
+    "the cluster workers at the time the cluster is started: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47b9fc40-c749-4d12-b9fe-a7eccd6b11fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_env_to_add={}\n",
     "aws_env_vars=['AWS_ACCESS_KEY_ID',\n",
     "              'AWS_SECRET_ACCESS_KEY',\n",
@@ -40,11 +105,45 @@
     "for _e in aws_env_vars:\n",
     "    if _e in os.environ:\n",
     "        _env_to_add[_e] = os.environ[_e]\n",
-    "_options.environment_vars = _env_to_add    \n",
+    "_options.environment_vars = _env_to_add    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7a9269-501b-40a7-9478-e42792600549",
+   "metadata": {},
+   "source": [
+    "## Cluster Start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a59614f-774e-4943-886b-251f628fb042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cluster = gateway.new_cluster(_options)          ##<< create cluster via the dask gateway\n",
     "cluster.adapt(minimum=10, maximum=30)             ##<< Sets scaling parameters. \n",
-    "client = cluster.get_client()\n",
-    "\n",
+    "client = cluster.get_client()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80bf775c-c8b5-49d8-b31f-bdf734297426",
+   "metadata": {},
+   "source": [
+    "## Notify\n",
+    "Give the user the link by which they can monitor the cluster workers' progress and status. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394a8ff6-a154-4679-b217-22366c24ea51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"The 'cluster' object can be used to adjust cluster behavior.  i.e. 'cluster.adapt(minimum=10)'\")\n",
     "print(\"The 'client' object can be used to directly interact with the cluster.  i.e. 'client.submit(func)' \")\n",
     "print(f\"The link to view the client dashboard is:\\n>  {client.dashboard_link}\")"
