--- a/101/EffectSizeShape.ipynb
+++ b/101/EffectSizeShape.ipynb
@@ -52,7 +52,7 @@
     "## Why Chunk\n",
     "The simple reason is that the full dataset won't fit in memory. It has to be\n",
     "divided in some way so that only those parts of the data being actively worked\n",
-    "are loaded. \n",
+    "are loaded. (See more in {doc}`WhyChunk`).\n",
     "\n",
     "This has other benefits when it comes to parallel algorithms.  If work can be\n",
     "performed in parallel, it is easy to set it up such that a separate worker is\n",
