--- a/101/ExamineSourceData.ipynb
+++ b/101/ExamineSourceData.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# lazy-load\n",
-    "ds_in = xr.open_dataset(OPENDAP_url, decode_times=False)\n",
+    "ds_in = xr.open_dataset(OPENDAP_url)#, decode_times=False)\n",
     "# and show it:\n",
     "ds_in"
    ]
