--- a/101/SecondaryExample.ipynb
+++ b/101/SecondaryExample.ipynb
@@ -28,7 +28,7 @@
    "id": "12c9573c-f965-458c-88a8-5376ded065da",
    "metadata": {},
    "source": [
-    "## preamble\n",
+    "## Preamble\n",
     "Stuff we need..."
    ]
   },
@@ -42,7 +42,8 @@
     "import os\n",
     "import logging\n",
     "import xarray as xr\n",
-    "logging.basicConfig(level=logging.INFO, force=True)\n"
+    "\n",
+    "logging.basicConfig(level=logging.INFO, force=True)"
    ]
   },
   {
@@ -124,7 +125,9 @@
    "metadata": {},
    "source": [
     "## Establish Chunking Preference\n",
-    "Will proceed with the assumption that this data will most likely be taken at full extent, for short time intervals. "
+    "Will proceed with the assumption that this data will most likely be taken at full extent, for short time intervals. \n",
+    "\n",
+    "Examining each of the dimensions of this dataset: "
    ]
   },
   {
@@ -161,6 +164,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da090e6f-4c11-439c-86f7-3246431b3a7b",
+   "metadata": {},
+   "source": [
+    "If we chunk with this pattern, how big will each chunk be? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2e1be74e-2bcc-48cb-becc-ea10e40cf3ff",
@@ -171,7 +182,7 @@
     "bytes = 365 * 195 * 462 * 4\n",
     "kbytes = bytes / (2**10)\n",
     "mbytes = kbytes / (2**10)\n",
-    "print(f\"TMN chunk size: {bytes=} ({kbytes=:.2f})({mbytes=:.4f})\")"
+    "print(f\"Chunk size: {bytes=} ({kbytes=:.2f})({mbytes=:.4f})\")"
    ]
   },
   {
@@ -179,7 +190,7 @@
    "id": "99737679-82da-4ca4-b4f7-f2fe97411553",
    "metadata": {},
    "source": [
-    " 125MB chunk seems reasonable, but it does mean that a time-series read pattern will have to take in 45 chunks (assuming the spatial extent of the analysis is within one lat/lon chunk).  To bring that down, let's take the time dimension as 2 years at a time: "
+    " 125MB chunk seems reasonable, but it does mean that a time-series read pattern will have to take in 45 chunks (assuming the spatial extent of the analysis is within one lat/lon chunk).  To bring that down, let's take the time dimension as 2 years at a time.  Just to make the numbers more round, we'll express the time as 24 30-day months: "
    ]
   },
   {
@@ -192,7 +203,7 @@
     "ds_in = xr.open_dataset(\n",
     "    DATA_url + r\"#fillmismatch\", \n",
     "    decode_coords=True, \n",
-    "    chunks={'day': 365*2, 'lon': 462, 'lat': 195}\n",
+    "    chunks={'day': 24*30, 'lon': 462, 'lat': 195}\n",
     ")\n",
     "ds_in"
    ]
@@ -237,9 +248,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "users-users-pangeofu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-users-users-pangeofu-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
