--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -23,7 +23,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## What is chunking and why should you care?\n",
     "\n",
@@ -42,9 +45,34 @@
     "simplified use-case.  Consider a square array of integer values. Just for exposition, \n",
     "let's use a small array 10x10. \n",
     "\n",
-    "```\n",
-    "illustration\n",
-    "```\n",
+    "\n",
+    "$$\n",
+    "\\def\\arraystretch{2.0}\n",
+    "\\begin{array}{|c|c|c|c|c|c|c|c|c|c|}\n",
+    "   \\hline\n",
+    "   0,0 & 0,1 & 0,2 & 0,3 & 0,4 & 0,5 & 0,6 & 0,7 & 0,8 & 0,9\\\\\n",
+    "   \\hline\n",
+    "   1,0 & 1,1 & 1,2 & 1,3 & 1,4 & 1,5 & 1,6 & 1,7 & 1,8 & 1,9\\\\\n",
+    "   \\hline\n",
+    "   2,0 & 2,1 & 2,2 & 2,3 & 2,4 & 2,5 & 2,6 & 2,7 & 2,8 & 2,9\\\\\n",
+    "   \\hline\n",
+    "    3,0 & 3,1 & 3,2 & 3,3 & 3,4 & 3,5 & 3,6 & 3,7 & 3,8 & 3,9\\\\\n",
+    "   \\hline\n",
+    "    4,0 & 4,1 & 4,2 & 4,3 & 4,4 & 4,5 & 4,6 & 4,7 & 4,8 & 4,9\\\\\n",
+    "   \\hline\n",
+    "    5,0 & 5,1 & 5,2 & 5,3 & 5,4 & 5,5 & 5,6 & 5,7 & 5,8 & 5,9\\\\\n",
+    "    \\hline\n",
+    "   6,0 & 6,1 & 6,2 & 6,3 & 6,4 & 6,5 & 6,6 & 6,7 & 6,8 & 6,9\\\\\n",
+    "    \\hline\n",
+    "   7,0 & 7,1 & 7,2 & 7,3 & 7,4 & 7,5 & 7,6 & 7,7 & 7,8 & 7,9\\\\\n",
+    "    \\hline\n",
+    "   8,0 & 8,1 & 8,2 & 8,3 & 8,4 & 8,5 & 8,6 & 8,7 & 8,8 & 8,9\\\\\n",
+    "    \\hline\n",
+    "   9,0 & 9,1 & 9,2 & 9,3 & 9,4 & 9,5 & 9,6 & 9,7 & 9,8 & 9,9\\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
     "\n",
     "Computer memory is not addressed in grids -- it is a linear address space, so the\n",
     "2D matrix has to be organized in memory such that it presents as 2D, while being\n",
@@ -55,9 +83,29 @@
     "  memory. The 'distance' from `r0c0` to `r0c1` (a one-cell logical move within the row) \n",
     "  is short, while the 'distance' to `r1c0` (a one-cell logical move within the column) \n",
     "  is long.\n",
+    "\n",
+    "$$\n",
+    "\\def\\arraystretch{2.0}\n",
+    "\\begin{array}{|c|c|c|c|c c|c|c|c|c| c}\n",
+    "   \\hline\n",
+    "   0,0 & 0,1 & 0,2 & 0,3 & ... & ... & 1,0  & 1,1 & 1,2 & 1,3 & ... \\\\\n",
+    "   \\hline\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
     "* Column-Major -- A column of the array occupies a contiguious block of memory. This \n",
     "  implies that cells which are adjacent horizontally are not near one another physically \n",
     "  in memory. \n",
+    "\n",
+    "$$\n",
+    "\\def\\arraystretch{2.0}\n",
+    "\\begin{array}{|c|c|c|c|c c|c|c|c|c| c}\n",
+    "   \\hline\n",
+    "   0,0 & 1,0 & 2,0 & 3,0 & ... & ... & 0,1  & 1,1 & 2,1 & 3,1 & ... \\\\\n",
+    "   \\hline\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
     "\n",
     "In either mapping, `r3c5` (for example) still fetches the same value.  The array \n",
     "still indexes/addresses in the same way as far as the user is concerned, but the \n",
