--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "### Example - First Principles\n",
     "\n",
-    "In this example, we will illustrate two common memory organization (analagous to chunking) patterns that computers use when handling basic multidimensional data.\n",
+    "In this example, we will illustrate two common memory organization (analagous to chunking) strategies that computers use when handling basic multidimensional data.\n",
     "To simplify this, let's consider a small 10x10 array of integer values.\n",
     "\n",
     "$$\n",
@@ -108,7 +108,7 @@
     "\n",
     "In either mapping, `r3c5` (for example) still fetches the same value.\n",
     "For a single value, this is not a problem.\n",
-    "The array is still indexed/addressed in the same way as far as the user is concerned, but the memory organization pattern determines how nearby an 'adjacent' index is.\n",
+    "The array is still indexed/addressed in the same way as far as the user is concerned, but the memory organization strategy determines how nearby an 'adjacent' index is.\n",
     "This becomes important when trying to get a subsection of the data.\n",
     "For example, if the array is in row-major order and we select say `r0`, this is fast for the computer as all the data is adjacent.\n",
     "However, if we wanted `c0`, then the computer has to access every 10th value in memory, which as you can imagine is not as efficient.\n",
@@ -116,7 +116,7 @@
     "### Extend to Chunking\n",
     "\n",
     "The basic idea behind chunking is an extension of this memory organization principle.\n",
-    "As the size of the array increases, the chunk pattern becomes more relevant.\n",
+    "As the size of the array increases, the chunking strategy becomes more relevant.\n",
     "Now suppose the square array is now larger-than-memory and stored on disk such that only a single row or column can fit into memory at a time.\n",
     "If your data is chunked by **rows**, and you need to process the $i^{th}$ **column**, you will have to read one row at a time into memory, skip to the $i^{th}$ column value in each row, and extract that value.\n",
     "For this analysis, you can easily see why this would be slow due to the massive amount of I/O and be better if the array could instead be chunked in column-major order.\n",
@@ -133,7 +133,7 @@
     "\n",
     "By now, we have hopefully answered both of the question about \"what is data chunking?\" and \"why should I care?\".\n",
     "To really drive home the idea, let's apply the above theoretical example using [`dask`](https://docs.dask.org/en/stable/).\n",
-    "In this case, we will generate a square array of ones to test how different chunking patterns compare."
+    "In this case, we will generate a square array of ones to test how different chunking strategies compare."
    ]
   },
   {
@@ -237,7 +237,7 @@
    "source": [
     "### Balanced Chunks\n",
     "\n",
-    "As a final example, let's check a chunking pattern that is evenly split between columns and rows."
+    "As a final example, let's check a chunking strategy that is evenly split between columns and rows."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "source": [
     "As expected, it is about the same as accessing a single column.\n",
     "However, that means it is drastically faster than the column chunking when accessing rows.\n",
-    "Therefore, a chunking pattern that balances the dimensions is more generally applicable when both dimensions are needed for analysis."
+    "Therefore, a chunking strategy that balances the dimensions is more generally applicable when both dimensions are needed for analysis."
    ]
   },
   {
@@ -297,13 +297,13 @@
     "\n",
     "As a wrap up, let's review some of the pros and cons to chunking.\n",
     "Some we have clearly discussed while others may be more subtle.\n",
-    "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunking pattern.\n",
-    "However, this becomes a con when you change your analysis to one that favors a new chunking pattern.\n",
+    "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunking strategy.\n",
+    "However, this becomes a con when you change your analysis to one that favors a new chunking strategy.\n",
     "In other words, data that is well-organized to optimize one kind of analysis may not suit another kind of analysis on the same data.\n",
-    "While not a problem for our example here, changing the chunking pattern (known as \"**rechunking**\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
+    "While not a problem for our example here, changing the chunking strategy (known as \"**rechunking**\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
     "The space commitment can be substantial if a complex dataset needs to be organized for many different analyses.\n",
     "If our example above used unique values that we wanted to keep as we changed chunking, this would have meant that rather than having a single ~19 GiB dataset, we would have needed to keep all three, tripling our storage to almost 60 GiB.\n",
-    "Therefore, selecting an appropriate chunking pattern is critical when generating widely used datasets."
+    "Therefore, selecting an appropriate chunking strategy is critical when generating widely used datasets."
    ]
   }
  ],
