--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "### Example - First Principles\n",
     "\n",
-    "In this example, we will illustrate two common memory organization (analagous to chunking) strategies that computers use when handling basic multidimensional data.\n",
+    "In this example, we will illustrate two common memory organization strategies (analagous to chunking) that computers use when handling basic multidimensional data.\n",
     "To simplify this, let's consider a small 10x10 array of integer values.\n",
     "\n",
     "$$\n",
@@ -116,11 +116,11 @@
     "### Extend to Chunking\n",
     "\n",
     "The basic idea behind chunking is an extension of this memory organization principle.\n",
-    "As the size of the array increases, the chunking strategy becomes more relevant.\n",
+    "As the size of the array increases, the chunk shape becomes more relevant.\n",
     "Now suppose the square array is now larger-than-memory and stored on disk such that only a single row or column can fit into memory at a time.\n",
-    "If your data is chunked by **rows**, and you need to process the $i^{th}$ **column**, you will have to read one row at a time into memory, skip to the $i^{th}$ column value in each row, and extract that value.\n",
+    "If your data is chunked by row, and you need to process the $i^{th}$ column, you will have to read one row at a time into memory, skip to the $i^{th}$ column value in each row, and extract that value.\n",
     "For this analysis, you can easily see why this would be slow due to the massive amount of I/O and be better if the array could instead be chunked in column-major order.\n",
-    "Just to make this clear, if your data was now chunked by **columns**, all you would have to do is read the $i^{th}$ column into memory, and you would be good to go.\n",
+    "Just to make this clear, if your data was now chunked by columns, all you would have to do is read the $i^{th}$ column into memory, and you would be good to go.\n",
     "Meaning you would just need a single read from disk versus reading however many rows your data has.\n",
     "While handling chunks may seem like it would become complicated, array-handling libraries (`numpy`, `xarray`, `pandas`, `dask`, and others) will handle all of the record-keeping to know which chunk holds what data within the dataset. "
    ]
@@ -133,7 +133,7 @@
     "\n",
     "By now, we have hopefully answered both of the question about \"what is data chunking?\" and \"why should I care?\".\n",
     "To really drive home the idea, let's apply the above theoretical example using [`dask`](https://docs.dask.org/en/stable/).\n",
-    "In this case, we will generate a square array of ones to test how different chunking strategies compare."
+    "In this case, we will generate a square array of ones to test how different \"**chunk shapes**\" compare."
    ]
   },
   {
@@ -237,7 +237,7 @@
    "source": [
     "### Balanced Chunks\n",
     "\n",
-    "As a final example, let's check a chunking strategy that is evenly split between columns and rows."
+    "As a final example, let's check a square chunk shape that keeps about the same number of elements as the pure row and column chunking."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "source": [
     "As expected, it is about the same as accessing a single column.\n",
     "However, that means it is drastically faster than the column chunking when accessing rows.\n",
-    "Therefore, a chunking strategy that balances the dimensions is more generally applicable when both dimensions are needed for analysis."
+    "Therefore, a chunk shape that balances the dimensions is more generally applicable when both dimensions are needed for analysis."
    ]
   },
   {
@@ -297,13 +297,13 @@
     "\n",
     "As a wrap up, let's review some of the pros and cons to chunking.\n",
     "Some we have clearly discussed while others may be more subtle.\n",
-    "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunking strategy.\n",
-    "However, this becomes a con when you change your analysis to one that favors a new chunking strategy.\n",
+    "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunk shape.\n",
+    "However, this becomes a con when you change your analysis to one that favors a new chunk shape.\n",
     "In other words, data that is well-organized to optimize one kind of analysis may not suit another kind of analysis on the same data.\n",
-    "While not a problem for our example here, changing the chunking strategy (known as \"**rechunking**\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
+    "While not a problem for our example here, changing the chunk shape (known as \"**rechunking**\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
     "The space commitment can be substantial if a complex dataset needs to be organized for many different analyses.\n",
     "If our example above used unique values that we wanted to keep as we changed chunking, this would have meant that rather than having a single ~19 GiB dataset, we would have needed to keep all three, tripling our storage to almost 60 GiB.\n",
-    "Therefore, selecting an appropriate chunking strategy is critical when generating widely used datasets."
+    "Therefore, selecting an appropriate chunk shape is critical when generating widely used datasets."
    ]
   }
  ],
